<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_substitutions"
            android:icon="@drawable/ic_menu_substitutions"
            android:title="@string/nav_substitutions" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_scedule"
            android:title="@string/nav_scedule" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/nav_calendar"/>
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_menu_todo"
            android:title="@string/nav_todo" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/nav_login" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/nav_info" />
        <!--<item
                android:id="@+id/nav_dev"
                android:icon="@drawable/ic_menu_dev_black_24dp"
                android:title="@string/nav_dev"/>
                -->
    </group>

</menu>
